--- a/fr/Page2.html
+++ b/fr/Page2.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/src/css/stlyle2.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-    <title>Dobby est libre</title>
+    <title>article 1</title>
   </head>
 <body>
     <header>
