--- a/fr/Page3.html
+++ b/fr/Page3.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/src/css/style3.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-    <title>Dobby est libre</title>
+    <title>article 2</title>
   </head>
 <body>
     <header>
