--- a/fr/Page5.html
+++ b/fr/Page5.html
@@ -7,10 +7,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/css/style4.css" />
+    <link rel="stylesheet" href="/src/css/style5.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-    <title>article 3</title>
+    <title>article 4</title>
   </head>
 <body>
     <header>
@@ -56,7 +56,7 @@
                     Si vous êtes fan de Harry Potter, il y a de fortes chances que le simple son de "Hedwig's Theme" déclenche une vague de nostalgie et d'excitation. Cette composition musicale emblématique est devenue l'âme musicale de la saga.
                     Elle doit son nom à Hedwig, la fidèle chouette blanche d'Harry, qui elle-même incarne une part essentielle de l'histoire.
                 </p>
-                <p>
+                <p class="p2">
                     La mélodie est interprétée par un orchestre symphonique, mettant en avant des instruments à cordes, des bois et des cuivres. Cette combinaison d'instruments crée une atmosphère enchanteresse, un peu mystérieuse, parfaitement adaptée à l'univers de Harry Potter. Les notes se succèdent avec élégance,
                     évoquant un sentiment de découverte, de voyage vers un monde inconnu et fantastique.
                 </p>
@@ -76,6 +76,9 @@
                     De l'étonnement lors de la découverte du monde magique pour la première fois à la tristesse des adieux à des personnages bien-aimés,
                     cette mélodie incarne les moments les plus puissants de la série.
                 </p>
+                <p class="p3">
+                    Au-delà des mots, la musique de John Williams a réussi à donner vie aux thèmes les plus profonds de Harry Potter. Elle nous rappelle que la magie n'est pas seulement une série de sorts et de potions, mais une aventure émotionnelle, une exploration de l'amitié, du courage, et du pouvoir de l'amour.
+                </p>
             </div>
             <div class="part5">
                 <h2>L'Épine Dorsale de la Magie de Harry Potter</h2>
@@ -84,7 +87,7 @@
                     laissez-vous emporter par la musique, et plongez dans l'univers merveilleux de Harry Potter.
                 </p>
                 <img src="/public/img/illuhedwige.webp" alt="Hedwige">
-                <p>
+                <p class="p4">
                     c’est bien plus qu'une simple musique de film. C'est un lien puissant entre les fans et l'univers magique de Harry Potter.
                     Chaque note résonne avec l'âme de la saga, rappelant à tous que la magie est partout si vous savez où regarder.
                 </p>
