--- a/fr/Page6.html
+++ b/fr/Page6.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/css/style4.css" />
+    <link rel="stylesheet" href="/src/css/style6.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     <title>article 3</title>
@@ -87,14 +87,14 @@
                         tout en explorant les relations entre les personnages.
                     </p>
                 </div>
-            <div>
+            <div class="part6">
                 <h2>La Conclusion Émouvante</h2>
                 <img src="/public/img/bannerconclu.webp" alt="banniere">
                 <p>
                     Chacun de ces réalisateurs a apporté sa touche personnelle à la saga Harry Potter, contribuant à créer un ensemble cohérent tout en explorant des aspects uniques de l'univers.
                     Leurs talents ont permis de captiver des millions de fans à travers le monde.
                 </p>
-                <p>
+                <p class="p2">
                     Grâce à leur travail acharné, la magie de Harry Potter a été préservée à l'écran, et chaque film continue de fasciner et d'inspirer de nouvelles générations.
                     L'héritage de la saga perdure, et le monde magique de Poudlard reste aussi vibrant que jamais.
                 </p>
@@ -117,7 +117,7 @@
             </section>
             <section class="autre_article">
                 <h1>Autres articles</h1>
-            <div>
+            <div class="aa1">
                 <h2>Harry Potter : La Saga Magique Qui a Enchanté le Monde.</h2>
                 <img src="/public/img/HarryP1 banner.webp" alt="Lien article 2">
                 <p>
@@ -126,7 +126,7 @@
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa2">
                 <h2>Harry Potter à l'École des Sorciers : Le Début Magique d'une Saga Épique</h2>
                 <img src="/public/img/HarryP1.webp" alt="Lien article 1">
                 <p>
@@ -135,7 +135,7 @@
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa3">
                 <h2>Harry Potter et les Reliques de la Mort : La Conclusion Épique d'une Saga Magique</h2>
                 <img src="/public/img/Harry_gare.webp" alt="Lien article 3">
                 <p>
@@ -144,7 +144,7 @@
                 <a href=""><img src="/public/img/partager" alt="partager"></a>
                 <a href=""><img src="/public/img/showmore" alt="voir plus sur l'article"></a>
             </div>
-            <div>
+            <div class="aa4">
                 <h2>Hedwig's Theme : La Mélodie Enchantée de la Saga Harry Potter</h2>
                 <img src="/public/img/Hedwige.webp" alt="Lien article 4">
                 <p>
