--- a/fr/Page2.html
+++ b/fr/Page2.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="/src/css/stlyle2.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-    <title>article 1</title>
+    <title>article 3</title>
   </head>
 <body>
     <header>
       <a href=""><img src="/public/img/logo.webp.jpeg"></a>
-      <p class="apropos">A PROPOS</p><p class="glossaire">GLOSSAIRE</p>
+      <p class="apropos"><a href="apropos.html">A PROPOS</a></p><p class="glossaire"><a href="Glossaire">GLOSSAIRE</a></p>
 
       <a aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menubtn">
         <div class="open-closed"><img class="menu-open" src="/public/img/menu-open.webp"/></div>
@@ -31,8 +31,7 @@
               <li><a href="Page6.html">Les Mage Derrière la Réalisation de Harry Potter</a></li>
             </ul>
         </nav>
-
-    </header>
+      </header>
     <main>
         <section class="landing">
             <img class="head" src="/public/img/Head.webp" alt="accueuil">
