--- a/fr/Page5.html
+++ b/fr/Page5.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="/src/css/style5.css" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-    <title>article 4</title>
+    <title>article 3</title>
   </head>
 <body>
     <header>
       <a href=""><img src="/public/img/logo.webp.jpeg"></a>
-      <p class="apropos">A PROPOS</p><p class="glossaire">GLOSSAIRE</p>
+      <p class="apropos"><a href="apropos.html">A PROPOS</a></p><p class="glossaire"><a href="Glossaire">GLOSSAIRE</a></p>
 
       <a aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menubtn">
         <div class="open-closed"><img class="menu-open" src="/public/img/menu-open.webp"/></div>
