--- a/fr/Page6.html
+++ b/fr/Page6.html
@@ -15,7 +15,7 @@
 <body>
     <header>
       <a href=""><img src="/public/img/logo.webp.jpeg"></a>
-      <p class="apropos">A PROPOS</p><p class="glossaire">GLOSSAIRE</p>
+      <p class="apropos"><a href="apropos.html">A PROPOS</a></p><p class="glossaire"><a href="Glossaire">GLOSSAIRE</a></p>
 
       <a aria-controls="mainNav" @click="menuIsOpen = ! menuIsOpen" class="header__menubtn">
         <div class="open-closed"><img class="menu-open" src="/public/img/menu-open.webp"/></div>
